--- a/wingrecord/wingrecord/wingrecord.vcproj
+++ b/wingrecord/wingrecord/wingrecord.vcproj
@@ -283,7 +283,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="FlyCapture2.lib FlyCapture2GUI.lib"
+				AdditionalDependencies="FlyCapture2.lib FlyCapture2GUI.lib opencv_core249.lib opencv_highgui249.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="1"
