Creating blank fmf reader class

--- a/wingtrack/wingtrack/wingtrack.vcproj
+++ b/wingtrack/wingtrack/wingtrack.vcproj
@@ -322,6 +322,18 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\fmfreader.cpp"
+				>
+				<FileConfiguration
+					Name="Release|x64"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="2"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -367,6 +379,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\fmfreader.h"
+				>
+			</File>
 			<File
 				RelativePath=".\stdafx.h"
 				>
