--- a/wingrecord/wingrecord/wingrecord.vcproj
+++ b/wingrecord/wingrecord/wingrecord.vcproj
@@ -323,6 +323,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\fmfwriter.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -368,6 +372,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\fmfwriter.h"
+				>
+			</File>
 			<File
 				RelativePath=".\stdafx.h"
 				>
