--- a/wingrecord/wingrecord/wingrecord.vcxproj
+++ b/wingrecord/wingrecord/wingrecord.vcxproj
@@ -168,6 +168,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="flycam.cpp" />
     <ClCompile Include="fmfwriter.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -178,6 +179,7 @@
     <ClCompile Include="wingrecord.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="flycam.h" />
     <ClInclude Include="fmfwriter.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
