--- a/wingtrack/wingtrack/wingtrack.vcxproj
+++ b/wingtrack/wingtrack/wingtrack.vcxproj
@@ -168,7 +168,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="filereader.cpp" />
-    <ClCompile Include="flycam.cpp" />
+    <ClCompile Include="pgrcam.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -179,7 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="filereader.h" />
-    <ClInclude Include="flycam.h" />
+    <ClInclude Include="pgrcam.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
