--- a/wingtrack/wingtrack/wingtrack.vcxproj
+++ b/wingtrack/wingtrack/wingtrack.vcxproj
@@ -156,6 +156,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <AdditionalDependencies>FlyCapture2.lib;FlyCapture2GUI.lib;opencv_core300.lib;opencv_highgui300.lib;opencv_imgproc300.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -167,7 +168,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="filereader.cpp" />
+    <ClCompile Include="fmfreader.cpp" />
+    <ClCompile Include="fmfwriter.cpp" />
     <ClCompile Include="pgrcam.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -178,7 +180,8 @@
     <ClCompile Include="wingtrack.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="filereader.h" />
+    <ClInclude Include="fmfreader.h" />
+    <ClInclude Include="fmfwriter.h" />
     <ClInclude Include="pgrcam.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
