--- a/flyVR/flyVR.vcxproj.filters
+++ b/flyVR/flyVR.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="pgrcam.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="arduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pgrcam.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="arduino.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
