--- a/spherecalib/spherecalib.vcxproj
+++ b/spherecalib/spherecalib.vcxproj
@@ -77,8 +77,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\SDK\OpenSceneGraph-3.2.2-rc2\OpenSceneGraph\build\install\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\SDK\OpenSceneGraph-3.2.2-rc2\OpenSceneGraph\build\install\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\SDK\OpenSceneGraph-3.2.1\OpenSceneGraph\build\install\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\SDK\OpenSceneGraph-3.2.1\OpenSceneGraph\build\install\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
